--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="back_button_description">Dismiss Change City Screen</string>
     <string name="get_weather">Change City</string>
     <string name="default_query">Enter city name</string>
-    <string name="enter_city_name">enter city name</string>
+    <string name="enter_city_name">Enter city name</string>
 
 </resources>
